@@ -1080,6 +1080,12 @@ bool event_handler::handle_event_command(const queued_event& event_info,
 		// range (i.e. -1..-10, 0..100, -10..10, etc).
 		const std::string random = cfg["random"];
 		if(random.empty() == false) {
+			// random is deprecated but will be available in the 1.4 branch
+			// so enable the message after forking
+			//! @todo Enable after branching and once rand works fully in MP
+			//! including synchronizing.
+			//lg::wml_error << "Usage of 'random' is deprecated use 'rand' instead, "
+			//	"support will be removed in 1.5.2.\n";
 			std::string random_value;
 			// If we're not replaying, create a random number
 			if(get_replay_source().at_end()) {
@@ -1144,7 +1150,6 @@ bool event_handler::handle_event_command(const queued_event& event_info,
 						break;
 					}
 				}
-
 				recorder.set_random_value(random_value.c_str());
 			}
 
@@ -1160,6 +1165,79 @@ bool event_handler::handle_event_command(const queued_event& event_info,
 			}
 			var = random_value;
 		}
+
+		// The new random generator, the logic is a copy paste of the old random.
+		const std::string rand = cfg["rand"];
+		if(rand.empty() == false) {
+			assert(state_of_game);
+
+			std::string random_value;
+
+			std::string word;
+			std::vector<std::string> words;
+			std::vector<std::pair<long,long> > ranges;
+			int num_choices = 0;
+			std::string::size_type pos = 0, pos2 = std::string::npos;
+			std::stringstream ss(std::stringstream::in|std::stringstream::out);
+			while (pos2 != rand.length()) {
+				pos = pos2+1;
+				pos2 = rand.find(",", pos);
+
+				if (pos2 == std::string::npos)
+					pos2 = rand.length();
+
+				word = rand.substr(pos, pos2-pos);
+				words.push_back(word);
+				std::string::size_type tmp = word.find("..");
+
+
+				if (tmp == std::string::npos) {
+					// Treat this element as a string
+					ranges.push_back(std::pair<int, int>(0,0));
+					num_choices += 1;
+				}
+				else {
+					// Treat as a numerical range
+					const std::string first = word.substr(0, tmp);
+					const std::string second = word.substr(tmp+2,
+							rand.length());
+
+					long low, high;
+					ss << first + " " + second;
+					ss >> low;
+					ss >> high;
+					ss.clear();
+
+					if (low > high) {
+						tmp = low;
+						low = high;
+						high = tmp;
+					}
+					ranges.push_back(std::pair<long, long>(low,high));
+					num_choices += (high - low) + 1;
+				}
+			}
+
+			int choice = state_of_game->get_random() % num_choices;
+			int tmp = 0;
+			for(size_t i = 0; i < ranges.size(); i++) {
+				tmp += (ranges[i].second - ranges[i].first) + 1;
+				if (tmp > choice) {
+					if (ranges[i].first == 0 && ranges[i].second == 0) {
+						random_value = words[i];
+					}
+					else {
+						tmp = (ranges[i].second - (tmp - choice)) + 1;
+						ss << tmp;
+						ss >> random_value;
+					}
+					break;
+				}
+			}
+
+			var = random_value;
+		}
+
 	}
 
 	// Conditional statements
