@@ -449,6 +449,7 @@ LEVEL_RESULT play_game(display& disp, game_state& gamestate, const config& game_
 
 		// Switch to the next scenario.
 		gamestate.scenario = gamestate.next_scenario;
+		gamestate.rotate_random();
 
 		if(io_type == IO_CLIENT) {
 			if (!gamestate.next_scenario.empty()){
